--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
         "seed:local": "dotenv -e .env.local -- ts-node prisma/seed.ts"
     },
     "dependencies": {
+        "@nestjs/cli": "10.0.0",
         "@nestjs/common": "10.0.0",
         "@nestjs/core": "10.0.0",
         "@nestjs/jwt": "10.2.0",
         "@nestjs/passport": "10.0.2",
         "@nestjs/platform-express": "10.0.0",
         "@nestjs/swagger": "7.1.16",
-        "@nestjs/cli": "10.0.0",
         "@prisma/client": "5.6.0",
         "class-validator": "0.14.0",
         "passport": "0.6.0",
@@ -43,7 +43,10 @@
         "@types/jest": "29.5.2",
         "@types/node": "20.3.1",
         "@types/passport-jwt": "3.0.13",
+        "@types/sinonjs__fake-timers": "^8.1.5",
+        "@types/sizzle": "^2.3.8",
         "@types/supertest": "2.0.12",
+        "@types/yauzl": "^2.10.3",
         "@typescript-eslint/eslint-plugin": "6.0.0",
         "@typescript-eslint/parser": "6.0.0",
         "eslint": "8.42.0",
