--- a/.drone.yml
+++ b/.drone.yml
@@ -1,13 +1,15 @@
 kind: pipeline
 name: continuous-integration
+# type property ?
 
 trigger:
     event:
         - pull_request
+# plutot trigger le file entier et preciser les steps impactées en fonction du context via un when
 
 steps:
     - name: quality-checks
-      image: node
+      image: node # versionning ?
       commands:
           - npm install
           - npm run lint
@@ -17,6 +19,11 @@ steps:
           - npm run test
       environment:
           DATABASE_URL: postgresql://db:password@database:5432/db?schema=public
+# eviter d'hardcoder les valeurs, utiliser des secrets ou ajouter le fichier au gitignore
+
+# pas sur de l'interet d'un npm format, surtout vu le .prettierrc
+# le lint devrait etre suffisament paramétré pour forcer les bonnes pratiques dev
+
 
 services:
     - name: database
@@ -24,6 +31,7 @@ services:
       environment:
           POSTGRES_USER: db
           POSTGRES_DB: password
+# ne pas afficher les credentials en clair dans le fichier, utiliser des secrets ou ajouter le fichier au gitignore
 
 ---
 kind: pipeline
@@ -35,9 +43,11 @@ trigger:
         - main
     event:
         - push
+# faire une branch par environnement, et trigger sur la branch correspondante
 
 depends_on:
     - continuous-integration
+# il depend de lui meme ?
 
 steps:
     - name: build-image
@@ -67,7 +77,7 @@ steps:
           - build-image
 
     - name: deploy-migration
-      image: node
+      image: node # versionning ?
       commands:
           - npx prisma migrate deploy
       environment:
