--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     },
     "devDependencies": {
         "@nestjs/testing": "10.0.0",
+        "@types/jest": "^29.5.11",
         "@types/node": "20.3.1",
         "@types/passport-jwt": "3.0.13",
         "@types/supertest": "2.0.12",
